Fix the height of coin details chart on small screens

--- a/scss/layout/_app-main.scss
+++ b/scss/layout/_app-main.scss
@@ -8,6 +8,7 @@
       padding: 2rem 1rem 3rem;
     }
     position: relative;
+    overflow: hidden;
     min-height: calc(100vh - 89px);
   }
 }
